fix: truncation of string before font load

--- a/style.css
+++ b/style.css
@@ -57,8 +57,6 @@ h4 {
 
 .grid-item {
   border-radius: 0.5em;
-  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
-    rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 .grid-item.menu {
